feat: reimplement mad tests with mocked mifare classic objects